--- a/lts/Dockerfile
+++ b/lts/Dockerfile
@@ -7,7 +7,7 @@ FROM node:6.10.0
 
 MAINTAINER Lanvige Jiang <lanvige@gmail.com>
 
-# Install yarn@0.20.3 & pm2@2.4.0
-RUN curl -o- -L https://yarnpkg.com/install.sh | bash
-RUN $HOME/.yarn/bin/yarn config set registry https://registry.npm.taobao.org
+# Install yarn@0.21.3 & pm2@2.4.0
+RUN curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 0.21.3
 RUN $HOME/.yarn/bin/yarn global add pm2@2.4.0
+RUN $HOME/.yarn/bin/yarn config set registry https://registry.npm.taobao.org
