--- a/current/7.7.2/onbuild/Dockerfile
+++ b/current/7.7.2/onbuild/Dockerfile
@@ -3,7 +3,7 @@
 #
 # VERSION Current
 
-FROM lanvige/node-deploy:7.6.0
+FROM node:7.7.2
 
 MAINTAINER Lanvige Jiang <lanvige@gmail.com>
 
@@ -15,6 +15,8 @@ ONBUILD ENV NODE_ENV $NODE_ENV
 # Set workdir
 WORKDIR /app/
 
+# install global npm libs
+RUN yarn global add pm2@2.4.0
 # install npm libs
 ONBUILD COPY package.json yarn.lock /app/
 ONBUILD RUN $HOME/.yarn/bin/yarn install --production && $HOME/.yarn/bin/yarn cache clean
