remove unuseful paramater in pm2-docker

--- a/7.8.0/onbuild/Dockerfile
+++ b/7.8.0/onbuild/Dockerfile
@@ -28,4 +28,4 @@ ONBUILD COPY . /app
 EXPOSE 80 443
 
 # Start process.yml
-CMD ["pm2-docker", "start", "--auto-exit", "--env", "production", "/app/process.yml"]
+CMD ["pm2-docker", "start", "/app/process.yml"]
