--- a/6.10.0/onbuild/alpine/Dockerfile
+++ b/6.10.0/onbuild/alpine/Dockerfile
@@ -27,6 +27,6 @@ ONBUILD COPY . /app
 
 EXPOSE 80 443
 
-#ENTRYPOINT ["pm2", "start", "--no-daemon", "/app/bin/api"]
-# CMD []
-CMD ["pm2-docker", "/app/process.yml"]
+
+# Start process.yml
+CMD ["pm2-docker", "start", "/app/process.yml"]
