add docker entrypoint support

--- a/6.10.2/onbuild/alpine/Dockerfile
+++ b/6.10.2/onbuild/alpine/Dockerfile
@@ -1,9 +1,9 @@
 #
 # Node Base Dockerfile
 #
-# VERSION LTS
+# VERSION LTS-alpine (yarn included)
 
-FROM node:6.10.0
+FROM node:6.10.2-alpine
 
 MAINTAINER Lanvige Jiang <lanvige@gmail.com>
 
@@ -16,7 +16,7 @@ ONBUILD ENV NODE_ENV $NODE_ENV
 WORKDIR /app/
 
 # install global npm libs
-RUN yarn global add pm2@2.4.2
+RUN yarn global add pm2@2.4.4
 # install npm libs
 ONBUILD COPY package.json yarn.lock /app/
 ONBUILD RUN yarn install --production && yarn cache clean
@@ -29,4 +29,5 @@ EXPOSE 80 443
 
 
 # Start process.yml
-CMD ["pm2-docker", "start", "/app/process.yml"]
+ENTRYPOINT ["pm2-docker"]
+CMD ["start", "/app/process.yml"]
