--- a/8.0.0/onbuild/alpine/Dockerfile
+++ b/8.0.0/onbuild/alpine/Dockerfile
@@ -3,7 +3,7 @@
 #
 # VERSION Current-alpine (yarn included)
 
-FROM node:7.10.0-alpine
+FROM node:8.0.0-alpine
 
 MAINTAINER Lanvige Jiang <lanvige@gmail.com>
 
@@ -16,7 +16,7 @@ MAINTAINER Lanvige Jiang <lanvige@gmail.com>
 WORKDIR /app/
 
 # install global npm libs
-RUN yarn global add pm2@2.4.4
+RUN yarn global add pm2@2.4.6
 # install npm libs
 ONBUILD COPY package.json yarn.lock /app/
 ONBUILD RUN yarn install --production && yarn cache clean
@@ -25,9 +25,10 @@ ONBUILD RUN yarn install --production && yarn cache clean
 ONBUILD COPY . /app
 # ONBUILD COPY process.yml /app/process.yml
 
+
+# Expose both the HTTP (80) and HTTPS (443) ports
 EXPOSE 80 443
 
 
 # Start process.yml
-ENTRYPOINT ["pm2-docker"]
-CMD ["start", "--env", "production", "/app/process.yml"]
+CMD ["nginx"]
