--- a/8.1.2/onbuild/alpine/Dockerfile
+++ b/8.1.2/onbuild/alpine/Dockerfile
@@ -1,9 +1,9 @@
 #
 # Node Base Dockerfile
 #
-# VERSION Current
+# VERSION Current-alpine (yarn included)
 
-FROM node:8.0.0
+FROM node:8.1.2-alpine
 
 MAINTAINER Lanvige Jiang <lanvige@gmail.com>
 
@@ -16,7 +16,7 @@ MAINTAINER Lanvige Jiang <lanvige@gmail.com>
 WORKDIR /app/
 
 # install global npm libs
-RUN yarn global add pm2@2.4.6
+RUN yarn global add pm2@2.5.0
 # install npm libs
 ONBUILD COPY package.json yarn.lock /app/
 ONBUILD RUN yarn install --production && yarn cache clean
@@ -25,6 +25,8 @@ ONBUILD RUN yarn install --production && yarn cache clean
 ONBUILD COPY . /app
 # ONBUILD COPY process.yml /app/process.yml
 
+
+# Expose both the HTTP (80) and HTTPS (443) ports
 EXPOSE 80 443
 
 
