upgrade current to 9.0.0 & pm2 to 2.7.2

--- a/9.0.0/onbuild/alpine/Dockerfile
+++ b/9.0.0/onbuild/alpine/Dockerfile
@@ -1,9 +1,9 @@
 #
 # Node Base Dockerfile
 #
-# VERSION LTS
+# VERSION LTS-alpine (yarn included)
 
-FROM node:6.11.3
+FROM node:9.0.0-alpine
 
 MAINTAINER Lanvige Jiang <lanvige@gmail.com>
 
@@ -16,7 +16,7 @@ MAINTAINER Lanvige Jiang <lanvige@gmail.com>
 WORKDIR /app/
 
 # install global npm libs
-RUN yarn global add pm2@2.6.0
+RUN yarn global add pm2@2.7.2
 # install npm libs
 ONBUILD COPY package.json yarn.lock /app/
 ONBUILD RUN yarn install --production && yarn cache clean
